--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
-# Node.js
+# Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-._*
-
-# IDE
-.vscode/
-.idea/
 
 # Build output
 dist/
-build/
+.DS_Store
 
 # Environment variables
 .env
 .env.local
-.env.*.local 
+.env.*.local
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# macOS
+.AppleDouble
+.LSOverride
+._*
+
+# Debugging
+npm-debug.log
+yarn-debug.log
+yarn-error.log 
