--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,31 @@
 # Dependencies
 node_modules/
 
-# Build output
+# Build outputs
 dist/
-.DS_Store
+dist*/
 
-# Environment variables
+# Environment files
 .env
 .env.local
 .env.*.local
 
-# Editor directories and files
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# macOS
-.AppleDouble
-.LSOverride
+# System files
+.DS_Store
+.DS_Store?
 ._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Debugging
-npm-debug.log
-yarn-debug.log
-yarn-error.log 
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
